# hoi4dev

./: .gitignore  README.md  __init__.py  clear.bash  initializer.py  install.bash  install.cmd  install_mac.bash  install_win.bash  install_win.cmd  pyproject.toml  release.sh  requirements-gui.txt  requirements.txt  setup.py  temp_focus_gui.py  version.bash
.github/workflows/: python-publish.yml
demo/PIHC2/: v0.2.2.py
doc/: hoi4dev.html  index.html  search.js
doc/hoi4dev/: achievements.html  bops.html  characters.html  cli.html  countries.html  decisions.html  diplomacy.html  divisions.html  entities.html  equipments.html  events.html  focuses.html  ideas.html  ideologies.html  init.html  intelligence_agencies.html  maps.html  modifiers.html  special_projects.html  technologies.html  traits.html  translation.html  utils.html
docs/en/: README.en.md
docs/zh/: 0.安装教程-前置.md  1.安装教程.md  2.使用教程.md  3.示例-PIHC2模组.md  README.zh.md
example_scripts/PIHC_v0_2_1_2024_10_06/: v0.2.1.py
gitcmds/: install_mac.bash
pkg/: hoi4dev-0.1.0.10-py3-none-any.whl  hoi4dev-0.1.0.11-py3-none-any.whl  hoi4dev-0.1.0.12-py3-none-any.whl  hoi4dev-0.1.0.13-py3-none-any.whl  hoi4dev-0.1.0.14-py3-none-any.whl  hoi4dev-0.1.0.3-py3-none-any.whl  hoi4dev-0.1.0.4-py3-none-any.whl  hoi4dev-0.1.0.6-py3-none-any.whl  hoi4dev-0.1.0.7-py3-none-any.whl  hoi4dev-0.1.0.8-py3-none-any.whl  hoi4dev-0.1.0.9-py3-none-any.whl  hoi4dev-0.1.1.0-py3-none-any.whl  hoi4dev-0.1.1.1-py3-none-any.whl  hoi4dev-0.1.1.2-py3-none-any.whl  hoi4dev-0.1.1.3-py3-none-any.whl
src/hoi4dev.egg-info/: PKG-INFO  SOURCES.txt  (+3 more)
(+166 files in other folders)
